results/SpecGenBench/4-shot/log-TwoSum-2023_11_28_02_18_29.txt
class TwoSum {
    //@ requires nums != null;
    //@ requires nums.length > 1;
    //@ ensures \result != null ==> \result.length == 2;
    //@ ensures \result != null ==> nums[\result[0]] + nums[\result[1]] == target;
    //@ ensures \result != null ==> \forall int i; 0 <= i && i < \result.length; nums[\result[i]] + nums[\result[i]] == target;
    //@ ensures \result == null ==> \forall int i; 0 <= i && i < nums.length; nums[i] + nums[i] != target;
    public int[] twoSum(int[] nums, int target) {
        int n = nums.length;
        //@ maintaining 0 <= i && i <= n;
        //@ maintaining \forall int k; 0 <= k && k < i; \forall int j; k+1 <= j && j < n; nums[k] + nums[j] != target;
        //@ decreases n - i;
        for (int i = 0; i < n; ++i) {
            //@ maintaining i+1 <= j && j <= n;
            //@ maintaining \forall int k; 0 <= k && k < i; \forall int j; k+1 <= j && j < n; nums[k] + nums[j] != target;
            //@ maintaining \forall int j; i+1 <= j && j < n; nums[i] + nums[j] != target;
            //@ decreases n - j;
            for (int j = i + 1; j < n; ++j) {
                if (nums[i] + nums[j] == target) {
                    return new int[]{i, j};
                }
            }
        }
        return new int[0];
    }
}
/home/max/Documents/JMLGPT/tmp/TwoSum.java:15: error: variable j is already defined in method twoSum(int[],int)
            //@ maintaining \forall int k; 0 <= k && k < i; \forall int j; k+1 <= j && j < n; nums[k] + nums[j] != target;
                                                                        ^
/home/max/Documents/JMLGPT/tmp/TwoSum.java:16: error: variable j is already defined in method twoSum(int[],int)
            //@ maintaining \forall int j; i+1 <= j && j < n; nums[i] + nums[j] != target;
                                        ^
2 errors

